finalize ui design

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
         <button class="btn start">Click me</button>
         <button class="btn eraser">Eraser</button>
         <button class="btn start">clear</button>
+        <div class="range-container">
+          <input type="range" class="range" min="4" max="64" />
+          <label for="range"></label>
+        </div>
       </div>
-      <div class="container"></div>
+      <div class="container" min="2" max="64"></div>
     </div>
+
+    <footer>
+      <h2>copyright &copy; Nurcodes <span id="date">2000</span></h2>
+    </footer>
 
     <script src="script.js"></script>
   </body>
